[gd_scene load_steps=7 format=2]

[ext_resource path="res://CommandPrompt/CommandProcesser.gd" type="Script" id=1]
[ext_resource path="res://TineralTheme.tres" type="StyleBox" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://IBMPlexMono-Italic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://CommandPrompt/input.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 984.0
margin_bottom = 560.0

[node name="GameInfo" type="PanelContainer" parent="Panel/MarginContainer/Rows"]
margin_right = 984.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/Rows/GameInfo"]
margin_right = 984.0
margin_bottom = 506.0

[node name="HistoryRows" type="VBoxContainer" parent="Panel/MarginContainer/Rows/GameInfo/ScrollContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputArea" type="PanelContainer" parent="Panel/MarginContainer/Rows"]
margin_top = 510.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 100, 50 )
custom_styles/panel = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/Rows/InputArea"]
margin_right = 984.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="Panel/MarginContainer/Rows/InputArea/HBoxContainer"]
margin_top = 18.0
margin_right = 8.0
margin_bottom = 32.0
text = ">"

[node name="LineEdit" type="LineEdit" parent="Panel/MarginContainer/Rows/InputArea/HBoxContainer"]
margin_left = 12.0
margin_right = 984.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/read_only = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
script = ExtResource( 5 )

[node name="CommandProcesser" type="Node" parent="."]
script = ExtResource( 1 )

[connection signal="text_entered" from="Panel/MarginContainer/Rows/InputArea/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="text_entered" from="Panel/MarginContainer/Rows/InputArea/HBoxContainer/LineEdit" to="Panel/MarginContainer/Rows/InputArea/HBoxContainer/LineEdit" method="_on_LineEdit_text_entered"]
